--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "mongodb": "^5.3.0",
+    "multer": "^1.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-is": ">= 16.8.0",
