--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-is": ">= 16.8.0",
-    "react-router-dom": "^6.9.0",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.9"
   },
   "scripts": {
