--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "mongodb": "^5.3.0",
     "multer": "^1.4.2",
