--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "cloudinary": "^1.37.0",
+    "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "mongodb": "^5.3.0",
     "multer": "^1.4.2",
