--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.0",
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.3.0",
-    "multer": "^1.4.2",
+    "mongoose": "^7.3.2",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-is": ">= 16.8.0",
@@ -16,7 +26,7 @@
     "styled-components": "^5.3.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
