--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "styled-components": "^5.3.9"
   },
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "npm run build && node backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
